# Project-2

./: .gitignore  CMakeLists.txt
TaskA/: primes.c
TaskB/user/: sh.c  tsh.c  tsh0.c  wc.c
